@@ -1,3 +1,9 @@
+2001-04-30  Bruno Haible  <haible@clisp.cons.org>
+
+	Silence "gcc -Wall -Wwrite-strings" warnings.
+	* localcharset.c (charset_aliases): Change type to 'const char *'.
+	(get_charset_aliases): Change type of 'cp' to 'const char *'.
+
 2001-04-19  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext-0.10.37 released.
